Fix navbar - use position fixed due to overflow-x conflict

--- a/frontend_beyond_detail/src/App.scss
+++ b/frontend_beyond_detail/src/App.scss
@@ -224,6 +224,7 @@
 }
 
 .navEl {
+  position: relative;
   z-index: 100;
   margin: 0;
 }
