--- a/frontend_beyond_detail/src/components/Navbar/Navbar2.scss
+++ b/frontend_beyond_detail/src/components/Navbar/Navbar2.scss
@@ -6,8 +6,10 @@
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(6px);
   transition: all 0.4s linear;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 900;
   padding: 0 2rem;
   width: 100%;
